# bitcoinapi

./: .gitignore  CMakeLists.txt  README.md  license.txt  test
src/bitcoin/: CMakeLists.txt  bitcoin.cpp  bitcoin.h  bitcoinapi.xml  litecoin.cpp  litecoin.h  litecoin1  litecoin1.cpp  test.xml  version.h.in
src/bitcoin/jsonrpc/: errors.cpp  errors.h  rpcprotocolclient.cpp
src/example/: CMakeLists.txt  examplecalls.cpp  getbalance.cpp  getdifficulty.cpp  getmininginfo.cpp  getnewaddress.cpp  getpeerinfo.cpp
